Update conforma cli
The ec task checks was running an old version
of the cli that has a bug in processing rule_data.
Updating to the latest.

https://issues.redhat.com/browse/EC-1554

--- a/.tekton/tasks/ec-checks.yaml
+++ b/.tekton/tasks/ec-checks.yaml
@@ -37,7 +37,7 @@ spec:
       stepactions_dir stepactions-ec
   - name: validate-all-tasks
     workingDir: "$(workspaces.source.path)/source"
-    image: quay.io/enterprise-contract/cli:latest@sha256:39f97c62a9b61e343782fe8d3ff91f8049d0029cf7d90db0340881d48514b871
+    image: quay.io/conforma/cli@sha256:f5c86ea59fc75f35d33e1fe70df5ff78af9efa4b4201834336fc653672cd01ff
     script: |
       set -euo pipefail
 
@@ -51,7 +51,7 @@ spec:
       ec validate input --policy "${policy}" --output yaml --strict=true ${args[*]}
   - name: validate-build-tasks
     workingDir: "$(workspaces.source.path)/source"
-    image: quay.io/enterprise-contract/cli:latest@sha256:39f97c62a9b61e343782fe8d3ff91f8049d0029cf7d90db0340881d48514b871
+    image: quay.io/conforma/cli@sha256:f5c86ea59fc75f35d33e1fe70df5ff78af9efa4b4201834336fc653672cd01ff
     script: |
       set -euo pipefail
 
@@ -65,7 +65,7 @@ spec:
       ec validate input --policy "${policy}" --output yaml --strict=true ${args[*]}
   - name: validate-step-actions
     workingDir: "$(workspaces.source.path)/source"
-    image: quay.io/enterprise-contract/cli:latest@sha256:39f97c62a9b61e343782fe8d3ff91f8049d0029cf7d90db0340881d48514b871
+    image: quay.io/conforma/cli@sha256:f5c86ea59fc75f35d33e1fe70df5ff78af9efa4b4201834336fc653672cd01ff
     script: |
       #!/bin/bash
       set -euo pipefail
