Fix ko pipeline to use oci buildah format and push multiple tags.
Signed-off-by: Greg Allen <gallen@redhat.com>

--- a/pipelines/ko-build-oci-ta/ko-build-oci-ta.yaml
+++ b/pipelines/ko-build-oci-ta/ko-build-oci-ta.yaml
@@ -170,7 +170,7 @@ spec:
       value:
       - $(tasks.build-container.results.IMAGE_URL)@$(tasks.build-container.results.IMAGE_DIGEST)
     - name: BUILDAH_FORMAT
-      value: docker
+      value: oci
     runAfter:
     - build-container
     taskRef:
