--- a/pipelines/ko-build-oci-ta/patch.yaml
+++ b/pipelines/ko-build-oci-ta/patch.yaml
@@ -167,7 +167,7 @@
   value: "true"
 - op: replace
   path: /spec/tasks/4/params/5/value
-  value: docker
+  value: oci
 
 # build-source-image
 - op: replace
