--- a/task/ko-oci-ta/0.1/ko-oci-ta.yaml
+++ b/task/ko-oci-ta/0.1/ko-oci-ta.yaml
@@ -121,6 +121,8 @@ spec:
           value: $(params.KO_DOCKER_REPO)
         - name: TAG
           value: $(params.TAG)
+        - name: TASKRUN_NAME
+          value: $(context.taskRun.name)
       script: |
         #!/bin/bash
         set -euo pipefail
@@ -136,7 +138,7 @@ spec:
         [ -n "${COMMIT_SHA}" ] && labels+=",vcs-ref=${COMMIT_SHA}"
         [ -n "${IMAGE_EXPIRES_AFTER}" ] && labels+=",quay.expires-after=${IMAGE_EXPIRES_AFTER})"
 
-        args=("${IMAGE_NAMING_STRATEGY}" --image-label "${labels}" --sbom spdx --sbom-dir /tmp)
+        args=("${IMAGE_NAMING_STRATEGY}" -t "${TASKRUN_NAME}" --image-label "${labels}" --sbom spdx --sbom-dir /tmp)
         [ -n "${TAG}" ] && args+=(-t "${TAG}")
 
         ko build "${args[@]}" "${IMPORT_PATH}" 2>&1 | tee /tmp/build.log
@@ -147,7 +149,7 @@ spec:
         sbom_url=$(grep 'Published SBOM' /tmp/build.log | awk '{print $5}')
         sbom_file=$(grep 'Writing SBOM to' /tmp/build.log | awk '{print $6}')
 
-        cosign attach sbom --type=spdx --input-format=json --sbom="${sbom_file}" "${url}@${digest}"
+        cosign attach sbom --type=spdx --input-format=json --sbom="${sbom_file}" "${ref}"
 
         echo "IMAGE_DIGEST=${digest}"
         echo "IMAGE_REF=${ref}"
@@ -155,7 +157,7 @@ spec:
         echo "SBOM_BLOB_URL=${sbom_url}"
 
         echo -n "${digest}" >"$(results.IMAGE_DIGEST.path)"
-        echo -n "${url}@${digest}" >"$(results.IMAGE_REF.path)"
+        echo -n "${ref}" >"$(results.IMAGE_REF.path)"
         echo -n "${url}" >"$(results.IMAGE_URL.path)"
         echo -n "${sbom_url}" >"$(results.SBOM_BLOB_URL.path)"
         echo "Completed."
