Update package name includes
EC is not able to find a package name with
a dot in the name.

--- a/policies/step-actions.yaml
+++ b/policies/step-actions.yaml
@@ -9,11 +9,8 @@ sources:
       - github.com/release-engineering/rhtap-ec-policy//data
     config:
       include:
-        - stepaction.image
-        - stepaction.kind
-        # Support legacy matchers for now
-        - image
-        - kind
+        - stepaction_image
+        - stepaction_kind
       exclude:
         # https://issues.redhat.com/browse/EC-1038
         - step_images.step_images_accessible:quay.io/redhat-services-prod/sast/coverity:202412.7
