--- a/.github/workflows/check-task-migration.yaml
+++ b/.github/workflows/check-task-migration.yaml
@@ -35,6 +35,8 @@ jobs:
           sudo apt-get install -y --no-install-recommends \
               tzdata python3-ruamel.yaml
 
+          pip install git+https://github.com/konflux-ci/pipeline-migration-tool --user
+
           kubectl get all -n tekton-pipelines
           # Require name main
           git branch main origin/main
