--- a/policies/build-tasks.yaml
+++ b/policies/build-tasks.yaml
@@ -4,6 +4,6 @@
 # more generic location, e.g. infra-deployments repository.
 sources:
   - policy:
-      - quay.io/enterprise-contract/ec-build_task-policy:latest
+      - oci::quay.io/conforma/build-task-policy:latest
     data:
       - git::https://github.com/release-engineering/rhtap-ec-policy//data
