Set memory request equal to memory limit for fbc-builder tasks
Refers to KONFLUX-11444

Signed-off-by: Yashvardhan Nanavati <yashn@bu.edu>

--- a/task/build-image-index/0.2/build-image-index.yaml
+++ b/task/build-image-index/0.2/build-image-index.yaml
@@ -106,7 +106,7 @@ spec:
       limits:
         memory: 4Gi
       requests:
-        memory: 512Mi
+        memory: 4Gi
         cpu: 250m
     args: ["$(params.IMAGES[*])"]
     script: |
@@ -242,7 +242,7 @@ spec:
       limits:
         memory: 512Mi
       requests:
-        memory: 256Mi
+        memory: 512Mi
         cpu: 100m
     script: |
       #!/bin/bash
@@ -313,5 +313,5 @@ spec:
       limits:
         memory: 512Mi
       requests:
-        memory: 256Mi
+        memory: 512Mi
         cpu: 100m
