chore(KONFLUX-11519): archive sast tasks and remove sast tasks from renavate.json
* since sast tasks have been maintainerd by konflux-sast-tasks repo
  so let's remove sast task from renovate.json
  to stop the mintmaker PR to update the these file

Signed-off-by: Hongwei Liu <hongliu@redhat.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -66,6 +66,8 @@
 /external-task/sast-snyk-check-oci-ta                @konflux-ci/integration-service-maintainers @sfowl
 /external-task/sast-unicode-check                    @konflux-ci/integration-service-maintainers @sfowl
 /external-task/sast-unicode-check-oci-ta             @konflux-ci/integration-service-maintainers @sfowl
+
+# maintained by konflux-sast-tasks, should be ignored by renovate
 /task/coverity-availability-check           @konflux-ci/integration-service-maintainers @sfowl
 /task/sast-coverity-check                   @konflux-ci/integration-service-maintainers @konflux-ci/build-maintainers @sfowl
 /task/sast-coverity-check-oci-ta            @konflux-ci/integration-service-maintainers @konflux-ci/build-maintainers @sfowl
