--- a/renovate.json
+++ b/renovate.json
@@ -93,7 +93,6 @@
         "stepactions/fips-operator-check-step-action/**",
         "task/clair-scan/**",
         "task/clamav-scan/**",
-        "task/coverity-availability-check/**",
         "task/deprecated-image-check/**",
         "task/fbc-fips-check-oci-ta/**",
         "task/fbc-fips-check/**",
@@ -102,14 +101,6 @@
         "task/fips-operator-bundle-check/**",
         "task/github-sarif-upload/**",
         "task/run-opm-command-oci-ta/**",
-        "task/sast-coverity-check-oci-ta/**",
-        "task/sast-coverity-check/**",
-        "task/sast-shell-check-oci-ta/**",
-        "task/sast-shell-check/**",
-        "task/sast-snyk-check-oci-ta/**",
-        "task/sast-snyk-check/**",
-        "task/sast-unicode-check-oci-ta/**",
-        "task/sast-unicode-check/**",
         "task/sbom-json-check/**",
         "task/validate-fbc/**"
       ]
@@ -201,6 +192,22 @@
         "task/opm-get-bundle-version/**",
         "task/opm-render-bundles/**"
       ]
+    },
+    {
+      "groupName": "konflux-sast-tasks",
+      "description": "Updated and verified in konflux-sast-tasks so should be ignored here",
+      "matchFileNames": [
+        "task/coverity-availability-check/**",
+        "task/sast-coverity-check-oci-ta/**",
+        "task/sast-coverity-check/**",
+        "task/sast-shell-check-oci-ta/**",
+        "task/sast-shell-check/**",
+        "task/sast-snyk-check-oci-ta/**",
+        "task/sast-snyk-check/**",
+        "task/sast-unicode-check-oci-ta/**",
+        "task/sast-unicode-check/**"
+      ],
+      "enabled": false
     },
     {
       "groupName": "tekton-tools-tasks",
